force-app/main/default/objects/RD_Integral_BDI_Table__c/RD_Integral_BDI_Table__c.object-meta.xml
<CustomObject>
    <label>RD Integral BDI Table</label>
    <nameField>
        <label>RD Integral BDI Table</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Integral BDI Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>