force-app/main/default/objects/RD_Integral_BDI_Table__c/fields/CableLength__c.field-meta.xml
<CustomField>
    <fullName>CableLength__c</fullName>
    <label>CableLength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>