force-app/main/default/objects/RD_Integral_BDI_Table__c/fields/CompSTC__c.field-meta.xml
<CustomField>
    <fullName>CompSTC__c</fullName>
    <label>CompSTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>