force-app/main/default/objects/RD_Integral_BDI_Table__c/fields/ModulePN__c.field-meta.xml
<CustomField>
    <fullName>ModulePN__c</fullName>
    <label>ModulePN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>