force-app/main/default/objects/RD_Integral_BDI_Table__c/fields/OrderDesc2__c.field-meta.xml
<CustomField>
    <fullName>OrderDesc2__c</fullName>
    <label>OrderDesc2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>