force-app/main/default/objects/RD_Integral_BDI_Table__c/fields/ROP__c.field-meta.xml
<CustomField>
    <fullName>ROP__c</fullName>
    <label>ROP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>