force-app/main/default/objects/RD_Integral_BDI_Table__c/fields/Seal_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Seal_Thickness__c</fullName>
    <label>Seal Thickness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>