force-app/main/default/objects/RD_Integral_BDI_Table__c/fields/StripMatlCode__c.field-meta.xml
<CustomField>
    <fullName>StripMatlCode__c</fullName>
    <label>StripMatlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>