force-app/main/default/objects/RD_Integral_BDI_Table__c/fields/SubAssyUsed__c.field-meta.xml
<CustomField>
    <fullName>SubAssyUsed__c</fullName>
    <label>SubAssyUsed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>