force-app/main/default/objects/RD_Integral_BDI_Table__c/fields/Wiring_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Wiring_Configuration__c</fullName>
    <label>Wiring Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>