force-app/main/default/objects/RD_Integral_BDI_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>GasketMatlCode__c</columns>
    <columns>StripMatlCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PTC__c</field>
        <operation>equals</operation>
        <value>GFS</value>
    </filters>
    <filters>
        <field>SZC__c</field>
        <operation>equals</operation>
        <value>0800</value>
    </filters>
    <label>All</label>
</ListView>